<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MaW Photos</string>
    <string name="title_categories">Categories</string>
    <string name="title_random">Random</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_upload">Upload Queue</string>

    <!-- notifications -->
    <string name="channel_name_new_categories">New Category Notification</string>
    <string name="channel_description_new_categories">Notification to highlight when new photo categories are available</string>
    <string name="channel_name_upload">Upload Notification</string>
    <string name="channel_description_upload">Notification to highlight when files were successfully uploaded</string>

    <!-- auth -->
    <string name="auth_client_id">maw_photos_android</string>
    <string name="auth_scheme_redirect_uri">us.mikeandwan.photos:/signin-oidc</string>

    <!-- about -->
    <string name="fragment_about_mikeandwan_us">mikeandwan.us</string>
    <string name="fragment_about_photos">Photos</string>
    <string name="logo_description">Logo</string>

    <!-- category list item -->
    <string name="li_category_thumbnail_description">Thumbnail</string>

    <!-- login activity -->
    <string name="activity_login_bg_description">Bittersweet Berries</string>
    <string name="activity_login_title">mikeandwan.us\nPhotos</string>
    <string name="activity_login_login_button_text">Login</string>
    <string name="activity_login_instructions">You must have an account at mikeandwan.us to login.\nIf you were not able to login, please try again below.</string>

    <!-- photo receiver activity -->
    <string name="act_photo_receiver_share_background">Share Background</string>
    <string name="act_photo_receiver_description">Files will be uploaded in the background when connected to WiFi</string>

    <!-- comment screen -->
    <string name="frg_comment_comment">Comment</string>
    <string name="frg_comment_add_comment">Add Comment</string>

    <!-- rating screen -->
    <string name="frg_rating_your_rating">Your Rating:</string>
    <string name="frg_rating_avg_rating">Average Rating:</string>

    <!-- random subnav -->
    <string name="manage_random_photos">Manage Random Photos</string>
    <string name="fetch_10_photos">Fetch 10 Photos</string>
    <string name="fetch_20_photos">Fetch 20 Photos</string>
    <string name="clear_random_photos">Clear Photos</string>

    <!-- search subnav -->
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_search_history">Clear History</string>

    <!-- search -->
    <string name="fragment_search_background">Share Background</string>
    <string name="fragment_search_no_results_found">No results found.</string>
    <string name="fragment_search_load_more">Show more</string>

    <!-- toolbar -->
    <string name="application_menu_icon_description">Application Menu Icon</string>
    <string name="navigate_back_icon_description">Navigate Back Icon</string>
    <string name="execute_search_icon_description">Execute Search Icon</string>

    <!-- photo -->
    <string name="rotate_left_icon_description">Rotate Left Icon</string>
    <string name="rotate_right_icon_description">Rotate Right Icon</string>
    <string name="toggle_slideshow_icon_description">Toggle Slideshow Icon</string>
    <string name="share_photo_icon_description">Share Photo Icon</string>
    <string name="view_photo_details_icon_description">View Photo Details Icon</string>

    <!-- navigation rail -->
    <string name="categories_icon_description">Categories Icon</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="random_photos_icon_description">Random Photos Icon</string>
    <string name="upload_queue_icon_description">Upload Queue Icon</string>
    <string name="help_icon_description">Help Icon</string>
    <string name="settings_icon_description">Settings Icon</string>

    <!-- settings -->
    <string name="fragment_settings_log_out">Log Out</string>

    <!-- year menu -->
    <string name="fragment_year_menu_choose_year">Choose Year</string>

    <!-- general -->
    <string name="text_separator">/</string>

    <!-- preferences -->
    <string name="pref_notifications_header">Notifications</string>
    <string name="pref_notifications_new_message_title">New Photo Notifications</string>
    <string name="pref_notifications_vibrate">Vibrate</string>
    <string name="grid_thumbnail_size">Grid Thumbnail Size</string>
    <string name="pref_category_display_header">Category List Display</string>
    <string name="pref_photo_display_header">Photo Display</string>
    <string name="pref_photo_display_slideshow_interval">Slideshow Interval</string>
    <string name="pref_random_display_header">Random Display</string>
    <string name="pref_search_display_header">Search Display</string>
    <string name="pref_search_query_count_to_remember">Query Count to Remember</string>
    <string name="pref_search_result_display_header">Search Result Display</string>
    <string name="pref_advanced_display_header">Advanced</string>

    <string name="cancel">Cancel</string>
</resources>
