<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="us.mikeandwan.photos.ui.controls.toolbar.ToolbarViewModel" />
    </data>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/app_icon_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/application_menu_icon_description"
            android:onClick="@{ () -> viewModel.onAppIconClicked() }"
            android:visibility="@{ viewModel.showAppIcon ? View.VISIBLE : View.GONE }"
            app:srcCompat="@drawable/ic_launch" />

        <ImageView
            android:id="@+id/app_icon_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/navigate_back_icon_description"
            android:onClick="@{ () -> viewModel.onBackClicked() }"
            android:visibility="@{ viewModel.showAppIcon ? View.GONE : View.VISIBLE }"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:visibility="@{ viewModel.showSearch ? View.GONE : View.VISIBLE}"
            android:text="@{ viewModel.toolbarTitle }"
            android:textColor="?attr/colorOnSurface"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{ viewModel.showSearch ? View.VISIBLE : View.GONE }">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="?attr/mawSearchBoxBackgroundColor"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@{ viewModel.searchRequest.query }"
                android:hint="@string/title_search"
                android:inputType="textAutoCorrect"
                android:imeOptions="actionSearch"
                android:autofillHints=".AUTOFILL_HINT_NOT_APPLICABLE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_search"
                android:onClick="@{ () -> viewModel.search(searchEditText.getText().toString()) }"
                android:contentDescription="@string/execute_search_icon_description"
                app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/searchEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
</layout>